force-app/main/default/objects/NG_Lead__c/NG_Lead__c.object-meta.xml
<CustomObject>
    <label>NextGen Lead</label>
    <pluralLabel>NextGen Leads</pluralLabel>
    <nameField>
        <label>Lead Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>