force-app/main/default/objects/NG_Lead__c/fields/Product_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Interest__c</fullName>
    <label>Product Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>Audio</fullName>
            </value>
            <value>
                <fullName>Computing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>