force-app/main/default/objects/NG_Lead__c/validationRules/Phone_Required_For_Conversion.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Required_For_Conversion</fullName>
    <active>true</active>
    <description>Prevents a Lead from being converted without a phone number. Ensures data quality and completeness for converted leads.</description>
    <errorConditionFormula>AND(
   ISPICKVAL(Status__c, &quot;Converted&quot;),
   ISBLANK(Phone__c)
)</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Please capture a Phone Number before converting this Lead.</errorMessage>
</ValidationRule>